--- a/Views/Layouts/Tv/Styles/TvMin.css
+++ b/Views/Layouts/Tv/Styles/TvMin.css
@@ -188,7 +188,7 @@ div.Date {
     color: #dfbe5e;
     font-weight: bold;
     font-size: 23px;
-    font-family: Gotham Light;
+    font-family: Gotham;
     text-shadow: 2px 2px 2px rgba(0,0,0,0.5);
  }
 
@@ -365,7 +365,7 @@ div#EpgTitle {
     white-space: pre-wrap;
     text-align: justify;
     font-size: 23px;
-    font-family: Gotham Light;
+    font-family: Gotham;
     text-shadow: 2px 2px 2px rgba(0,0,0,0.5);
 }
 
@@ -734,7 +734,7 @@ div#PvrProgramStars {
 }
 
 div#PvrProgramTitle {
-    width: 40%;
+    width: 60%;
     height: 4%;
     margin-top:0.5%;
     margin-left: 1%;
@@ -743,7 +743,7 @@ div#PvrProgramTitle {
     white-space: nowrap;
     color: #dfbe5e;
     font-size: 23px;
-    font-family: Gotham Light;
+    font-family: Gotham;
     text-shadow: 2px 2px 2px rgba(0,0,0,0.5);
 }
 
