--- a/Views/Layouts/Contents/Styles/Movies.css
+++ b/Views/Layouts/Contents/Styles/Movies.css
@@ -32,23 +32,21 @@ div.LanguageContainer {
 }
 /***************************** [ Panel filtro por Año ] *****************************/
 div#yearfilter {
-    width: 19%;
-    /* display: inline-block; */
+    width: 18%;
     height: 100%;
-    border-top-right-radius: 35px;
-    background: #15598e;
-    margin-top: 24px;
+    background: #005a9e;
+    border-right: 4px solid #79b1d3;
 }
 div#PanelYearFilter {
+    width: 78%;
+    height: 100%;
     color: #fff;
     font-size: 25px;
-    width: 69%;
-    height: 100%;
-    visibility: hidden;
     position: fixed;
     z-index: 1;
     display: flex;
     right: 0;
+    visibility: hidden;/*oculta el panel en el menu principal*/
 }
 div#PanelMoviesByYear {
     width: 56%;
@@ -148,28 +146,27 @@ div#PanelMoviesByGender {
 }
 /***************************** [ Menu filtros ] *****************************/
 div#MenuFilters {
+    width: 22%;
+    height: 100%;
     font-size: 25px;
     color: #fff;
-    width: 20%;
-    height: 90%;
     margin: 0;
-    visibility: hidden;
     bottom: 0;
     position: fixed;
-    /* background-image: url("../../vod/mvs/bg/bg4.jpg"); */
     z-index: 1;
     text-align: center;
-    background: #1f2326;
+    background: #005a9e;
+    border-right: 4px solid #79b1d3;
+    visibility: hidden;/*oculta el panel en el menu principal*/
 }
 
 div.OptionsFilter {
     width: 90%;
-    text-align: center;
-    font-size: 27px;
+    height: 19%;
     line-height: normal;
     margin: 5%;
-    height: 19%;
-    border-radius: 5px;
+    text-align: center;
+    font-size: 27px;
 }
 /***************************** [ Opciones en modo no visible ] *****************************/
 div.PlayingOptionsHidden{
@@ -414,14 +411,17 @@ div#Filter {
     font-family: bebas;
 }
 
+div#filterMovieCategory{
+    margin-top: 10%;
+}
+
 div.OptionsFilter {
     width: 90%;
+    height: 18%;
+    margin: 5%;
     text-align: center;
     font-size: 40px;
     line-height: normal;
-    margin: 5%;
-    height: 19%;
-    border-radius: 5px;
     font-family: bebas;
 }
 
@@ -616,7 +616,7 @@ div.MovieOption {
 .Year,
 .Rating {
     font-size: 20px;
-    font-family: Arial Rounded MT Bold;
+    font-family: Corbel;
 }
 
 .Director,
